--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,8 +1,77 @@
 #footer{
     background: #000000;
+    height: 100%;
 }
 .f1{
     width: 100%;
     height: 190px;
     background: #000000;
+    padding: 0 30px;
+}
+.f1 .p1{
+    height: 30px; 
+}
+.f1 div{
+    height: 161px;
+    line-height: 160px;
+    text-align: center;
+    padding-bottom:5px;
+    border-top:1px solid #333333;
+    border-top:1px solid #333333;
+}
+.f1 div img{
+    margin-right: 89px;
+    cursor:pointer;
+}
+h2{
+    font-size: 16px;
+    line-height: 30px;
+    font-weight: bold;
+    color: #fff;
+    padding: 0 0 13px 0;
+    background: #000000;
+    text-align: center;
+}
+.p2{
+    background: #000000;
+    text-align: center;
+}
+.p2 a{
+    white-space: nowrap;
+    font-size: 12px;
+    padding-right: 10px;
+    color:#9d9d9d;
+}
+.p2 a:hover{
+    color:#ffffff;
+}
+.p3{
+    text-align: center;
+    background: #000;
+    padding: 39px 0 27px 0;
+    color:#999999;
+}
+.p3 a{
+    font-size: 14px;
+    color:#999999;
+}
+.p3 a:hover{
+    color:#fff;
+}
+.p4{
+    background: #000;
+    font-size: 14px;
+    text-align: center;text-align: center;
+    color:#999999;
+    padding-bottom:19px; 
+}
+.p5{
+    padding:34px 0 69px 0; 
+    background: #000;
+    font-size:14px;
+    color:#939393;
+    text-align: center;
+}
+.p5 a{
+    color:#939393;
 }
