--- a/src/components/HomeMain/HomeMain.css
+++ b/src/components/HomeMain/HomeMain.css
@@ -262,3 +262,106 @@ main{
  .buttons .button2{
      float: right;
  }
+
+
+ /* 最新活动 */
+ .activity{
+     height: 635px;
+     background: #000;
+ }
+ .activityTitle{
+     height: 150px;
+     line-height: 150px;
+     text-align: center;
+ }
+ .activityTitle span{
+     display: inline-block;
+     color: #fff;
+     font-size: 30px;
+     position: relative;
+ }
+
+ .activityTitle span::before{
+     content: '';
+     display: block;
+     position: absolute;
+     width: 10px;
+     height: 40px;
+     left: -25px;
+     top: 55px;
+     background: rgb(102,102,102);
+     transform: skew(-15deg) translateZ(0);
+ }
+
+ .activityTitle span::after{
+     content: '';
+     display: block;
+     position: absolute;
+     width: 10px;
+     height: 40px;
+     right: -25px;
+     top: 55px;
+     background: rgb(102,102,102);
+     transform: skew(-15deg) translateZ(0);
+ }
+
+  .activity .Aslide{
+      height: 386px;
+  }
+
+  .activity .Aslide nav{
+      height: 386px;
+  }
+  .activity .Aslide nav li{
+      float: left;
+      width: 100%;
+      padding: 0 15px;
+  }
+
+  .activity .Aslide nav li img{
+      height: 386px;
+      width: 737px;
+      margin-right:15px; 
+  }
+
+  /* 最新资讯 */
+  .information{
+      height: 983px;
+      background: #fff;
+  }
+
+  .informationTitle{
+     height: 150px;
+     line-height: 150px;
+     text-align: center;
+ }
+ .informationTitle span{
+     display: inline-block;
+     color: #000;
+     font-size: 30px;
+     position: relative;
+ }
+
+ .informationTitle span::before{
+     content: '';
+     display: block;
+     position: absolute;
+     width: 10px;
+     height: 40px;
+     left: -25px;
+     top: 55px;
+     background: rgb(102,102,102);
+     transform: skew(-15deg) translateZ(0);
+ }
+
+ .informationTitle span::after{
+     content: '';
+     display: block;
+     position: absolute;
+     width: 10px;
+     height: 40px;
+     right: -25px;
+     top: 55px;
+     background: rgb(102,102,102);
+     transform: skew(-15deg) translateZ(0);
+ }
