--- a/src/components/HomeMain/HomeMain.css
+++ b/src/components/HomeMain/HomeMain.css
@@ -315,19 +315,70 @@ main{
   .activity .Aslide nav li{
       float: left;
       width: 100%;
-      padding: 0 15px;
+      box-sizing: border-box;
   }
 
   .activity .Aslide nav li img{
       height: 386px;
       width: 737px;
-      margin-right:15px; 
+      margin:0 10px; 
   }
+
+  /* 最新活动按钮组 */
+  .activity .Aslide .aButtons{
+      height: 100px;
+      position: relative;
+  }
+ .activity .Aslide .aButtons .aPrve{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    cursor: pointer;
+    background: url(../../assets/img/l_a.png) no-repeat;
+    background-size:cover; 
+    left: 30px;
+    bottom: 32px;
+}
+.activity .Aslide .aButtons .aNext{
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    cursor: pointer;
+    background: url(../../assets/img/r_a.png ) no-repeat;
+    background-size:cover; 
+    right: 30px;
+    bottom: 32px;
+}
+
+.activity .Aslide .aButtons .aFocus{
+    position: absolute;
+    bottom: 40px;
+    left: 50%;
+    transform: translateX(-50%);
+    overflow: hidden;
+}
+
+.activity .Aslide .aButtons .aFocus span{
+    display: block;
+    width: 12px;
+    height: 12px;
+    float: left;
+    border-radius: 50%;
+    border:1px solid #fff;
+    margin-right: 10px;
+    box-sizing: border-box;
+}
+
+.activity .Aslide .aButtons .aFocus .active{
+    background: #4647A3;
+    border: 1px solid #4647A3;
+}
 
   /* 最新资讯 */
   .information{
       height: 983px;
       background: #fff;
+      position: relative;
   }
 
   .informationTitle{
@@ -365,3 +416,197 @@ main{
      background: rgb(102,102,102);
      transform: skew(-15deg) translateZ(0);
  }
+
+ /* 最新资讯内容 */
+ .informText{
+     width: 1140px;
+     margin: 0 auto;
+     overflow: hidden;
+ }
+
+ .informText li{
+    float: left;
+    width: 558px;
+    height: 192px;
+    margin-right: 12px;
+    margin-bottom: 40px;
+ }
+ .informText li img{
+     width: 286px;
+     height: 192px;
+     float: left;
+     margin-right: 8px;
+ }
+.informText section{
+      float: left;
+      width: 264px;
+      position: relative;
+  }
+.informText section h3{
+    font-weight: bold;
+  }
+.informText section h3 a{
+    text-decoration: none;
+    color: #000;
+}
+
+.informText section .new_data{
+    height: 40px;
+    font-size: 12px;
+    color:#6F6B66;
+    line-height: 40px;
+    font-style: italic;
+}
+
+.informText section .message{
+    font-size: 12px;
+    color:#666;
+}
+/* 白色遮罩 */
+.informText section .white{
+    position: absolute;
+    bottom: -20px;
+    left: 0;
+    height: 70px;
+    background: #fff;
+    width: 264px;
+    background: linear-gradient(180deg, hsla(0, 0%, 100%, 0), #fff);
+}
+
+.information .button{
+    width: 200px;
+    height: 50px;
+    position: absolute;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    line-height: 50px;
+}
+.information .button a{
+    display: block;
+    text-decoration: none;
+    text-align: center;
+    font-size: 18px;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    border-radius: 25px;
+    background: #FFA400;
+}
+
+
+/* 育碧游戏 */
+
+.game{
+    height: 871px;
+    background: #333333;
+}
+
+ .gameTitle{
+     height: 150px;
+     line-height: 150px;
+     text-align: center;
+ }
+ .gameTitle span{
+     display: inline-block;
+     color: #fff;
+     font-size: 30px;
+     position: relative;
+ }
+
+ .gameTitle span::before{
+     content: '';
+     display: block;
+     position: absolute;
+     width: 10px;
+     height: 40px;
+     left: -25px;
+     top: 55px;
+     background: #666666;
+     transform: skew(-15deg) translateZ(0);
+ }
+
+ .gameTitle span::after{
+     content: '';
+     display: block;
+     position: absolute;
+     width: 10px;
+     height: 40px;
+     right: -25px;
+     top: 55px;
+     background: #666666;
+     transform: skew(-15deg) translateZ(0);
+ }
+
+ .game .gameList{
+     height: 640px;
+ }
+.game .gameList li{
+    width: 300px;
+    height: 320px;
+    box-sizing: border-box;
+}
+.gameList li .gameInner{
+    margin: 4px 8px;
+}
+
+.gameList li .gameInner:hover{
+    opacity: 0.7;
+}
+
+.gameInner img{
+    width: 284px;
+    height: 160px;
+}
+
+.gameText{
+    width: 100%;
+    padding: 9px;
+    box-sizing: border-box;
+}
+.gameText h3{
+    font-size: 18px;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.gameText .gameTime{
+    font-size: 12px;
+    color: #666666;
+    margin-bottom: 10px;
+}
+.gameText .icons{
+    height: 30px;
+}
+
+.gameText .icons .pc_icon{
+    display: inline-block;
+    background: url('../../assets/img/pc.png') no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+}
+
+.gameText .icons .cons_icon{
+    display: inline-block;
+    background: url('../../assets/img/cons.png') no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+}
+
+.gameText .icons .phone_icon{
+    display: inline-block;
+    background: url('../../assets/img/phone.png') no-repeat;
+    width: 30px;
+    height: 30px;
+    background-size: cover;
+}
+
+.bottom_S{
+    height: 18px;
+}
+.bottom_S img{
+    width: 100%;
+    height: 100%;
+}
